--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
 defusedxml==0.6.0
-Django==3.0.5
+Django>=2.0,<3.0.5
+psycopg2>=2.7,<3.0
 idna==2.9
 oauthlib==3.1.0
 pycparser==2.20
