--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==2.9.2
 defusedxml==0.6.0
 Django>=2.0,<3.0.5
 psycopg2>=2.7,<3.0
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
 pycparser==2.20
