--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 asgiref==3.2.7
+autopep8==1.5.2
+bson==0.5.8
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
+dataclasses==0.6
 defusedxml==0.6.0
 Django==3.0.5
 idna==2.9
+mysqlclient==1.4.6
 oauthlib==3.1.0
+pkg-resources==0.0.0
 pycparser==2.20
 PyJWT==1.7.1
+python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.23.0
