--- a/config/nginx/inshort.conf
+++ b/config/nginx/inshort.conf
@@ -7,6 +7,7 @@ upstream web {
 server {
   location / {
         proxy_pass http://web/;
+        proxy_set_header X-Real-IP $remote_addr;
     }
   listen 8000;
   server_name localhost;
