--- a/config/nginx/inshort.conf
+++ b/config/nginx/inshort.conf
@@ -3,12 +3,26 @@ upstream web {
   server web:8000;
 }
 
-# portal
 server {
-  location / {
-        proxy_pass http://web/;
-        proxy_set_header X-Real-IP $remote_addr;
+    listen 80;
+    server_name inshort.pp.ua;
+    location / {
+        return 301 https://$host$request_uri;
     }
-  listen 8000;
-  server_name localhost;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name inshort.pp.ua;
+    
+    location / {
+        proxy_pass http://web/;
+        proxy_set_header X-Real-IP $remote_addr; #for demo purposes
+    }
+
+    # ssl_certificate /etc/letsencrypt/live/inshort.pp.ua/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/inshort.pp.ua/privkey.pem;
 }
