Revert "SSL added to nginx"
This reverts commit 9c75dfceac0ebbc5fc781420890e3a4df7ed26ff.

--- a/config/nginx/inshort.conf
+++ b/config/nginx/inshort.conf
@@ -23,9 +23,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr; #for demo purposes
     }
 
-    ssl_certificate /etc/letsencrypt/live/inshort.pp.ua/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/inshort.pp.ua/privkey.pem;
-
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # ssl_certificate /etc/letsencrypt/live/inshort.pp.ua/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/inshort.pp.ua/privkey.pem;
 }
