moved to shortly.pp.ua domain

--- a/config/nginx/inshort.conf
+++ b/config/nginx/inshort.conf
@@ -5,7 +5,7 @@ upstream web {
 
 server {
     listen 80;
-    server_name inshort.pp.ua;
+    server_name shortly.pp.ua;
     location / {
         return 301 https://$host$request_uri;
     }
@@ -16,15 +16,15 @@ server {
 
 server {
     listen 443 ssl;
-    server_name inshort.pp.ua;
+    server_name shortly.pp.ua;
     
     location / {
         proxy_pass http://web/;
         proxy_set_header X-Real-IP $remote_addr; #for demo purposes
     }
 
-    ssl_certificate /etc/letsencrypt/live/inshort.pp.ua/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/inshort.pp.ua/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/shortly.pp.ua/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/shortly.pp.ua/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
