--- a/config/nginx/inshort.conf
+++ b/config/nginx/inshort.conf
@@ -20,6 +20,7 @@ server {
     
     location / {
         proxy_pass http://web/;
+	proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr; #for demo purposes
     }
 
