--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
 defusedxml==0.6.0
-Django>=2.0,<=3.0.5
-gunicorn==20.0.2
+dj-database-url==0.5.0
+Django==3.0.5
+django-heroku==0.3.1
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
+psycopg2==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 python3-openid==3.1.0
@@ -19,4 +22,4 @@ social-auth-app-django==3.1.0
 social-auth-core==3.3.3
 sqlparse==0.3.1
 urllib3==1.25.9
-mysqlclient>=1.4.6
+whitenoise==5.0.1
